logs/leexportpy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DateTime'...
Listing './lib/python3.5/site-packages/DateTime/tests'...
Listing './lib/python3.5/site-packages/DateTime-4.1.1.egg-info'...
Listing './lib/python3.5/site-packages/Twisted-16.2.0.egg-info'...
Listing './lib/python3.5/site-packages/configobj-5.0.6.egg-info'...
Listing './lib/python3.5/site-packages/daemonize-2.4.6.dist-info'...
Listing './lib/python3.5/site-packages/kafka'...
Listing './lib/python3.5/site-packages/kafka/consumer'...
Listing './lib/python3.5/site-packages/kafka/coordinator'...
Listing './lib/python3.5/site-packages/kafka/coordinator/assignors'...
Listing './lib/python3.5/site-packages/kafka/metrics'...
Listing './lib/python3.5/site-packages/kafka/metrics/stats'...
Listing './lib/python3.5/site-packages/kafka/partitioner'...
Listing './lib/python3.5/site-packages/kafka/producer'...
Listing './lib/python3.5/site-packages/kafka/protocol'...
Listing './lib/python3.5/site-packages/kafka-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/leexportpy'...
Compiling './lib/python3.5/site-packages/leexportpy/leexport.py'...
***   File "./lib/python3.5/site-packages/leexportpy/leexport.py", line 197
    print "Trying to run the app..."
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/leexportpy/services'...
Listing './lib/python3.5/site-packages/leexportpy-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.9.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/twisted'...
Listing './lib/python3.5/site-packages/twisted/_threads'...
Listing './lib/python3.5/site-packages/twisted/_threads/test'...
Listing './lib/python3.5/site-packages/twisted/application'...
Listing './lib/python3.5/site-packages/twisted/application/test'...
Listing './lib/python3.5/site-packages/twisted/conch'...
Listing './lib/python3.5/site-packages/twisted/conch/ssh'...
Listing './lib/python3.5/site-packages/twisted/conch/test'...
Listing './lib/python3.5/site-packages/twisted/cred'...
Listing './lib/python3.5/site-packages/twisted/cred/test'...
Listing './lib/python3.5/site-packages/twisted/internet'...
Listing './lib/python3.5/site-packages/twisted/internet/iocpreactor'...
Listing './lib/python3.5/site-packages/twisted/internet/iocpreactor/iocpsupport'...
Listing './lib/python3.5/site-packages/twisted/internet/test'...
Listing './lib/python3.5/site-packages/twisted/internet/test/fake_CAs'...
Listing './lib/python3.5/site-packages/twisted/logger'...
Listing './lib/python3.5/site-packages/twisted/logger/test'...
Listing './lib/python3.5/site-packages/twisted/mail'...
Listing './lib/python3.5/site-packages/twisted/mail/test'...
Listing './lib/python3.5/site-packages/twisted/manhole'...
Listing './lib/python3.5/site-packages/twisted/manhole/ui'...
Listing './lib/python3.5/site-packages/twisted/names'...
Listing './lib/python3.5/site-packages/twisted/names/test'...
Listing './lib/python3.5/site-packages/twisted/persisted'...
Listing './lib/python3.5/site-packages/twisted/persisted/test'...
Listing './lib/python3.5/site-packages/twisted/plugins'...
Listing './lib/python3.5/site-packages/twisted/positioning'...
Listing './lib/python3.5/site-packages/twisted/positioning/test'...
Listing './lib/python3.5/site-packages/twisted/protocols'...
Listing './lib/python3.5/site-packages/twisted/protocols/haproxy'...
Listing './lib/python3.5/site-packages/twisted/protocols/haproxy/test'...
Listing './lib/python3.5/site-packages/twisted/protocols/test'...
Listing './lib/python3.5/site-packages/twisted/python'...
Listing './lib/python3.5/site-packages/twisted/python/test'...
Listing './lib/python3.5/site-packages/twisted/runner'...
Listing './lib/python3.5/site-packages/twisted/scripts'...
Listing './lib/python3.5/site-packages/twisted/spread'...
Listing './lib/python3.5/site-packages/twisted/spread/ui'...
Listing './lib/python3.5/site-packages/twisted/test'...
Listing './lib/python3.5/site-packages/twisted/trial'...
Listing './lib/python3.5/site-packages/twisted/trial/test'...
Listing './lib/python3.5/site-packages/twisted/web'...
Listing './lib/python3.5/site-packages/twisted/web/_auth'...
Listing './lib/python3.5/site-packages/twisted/web/test'...
Listing './lib/python3.5/site-packages/twisted/words'...
Listing './lib/python3.5/site-packages/twisted/words/im'...
Listing './lib/python3.5/site-packages/twisted/words/xish'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
